# ApplicationDevelopmentFramework

./: CMakeLists.txt  TODO.md  build.sh
include/: Object.hpp  Primitives.hpp  QObject.hpp  QObjectManager.hpp  Renderer.hpp  TransMatrices.hpp  shader.hpp  window.hpp
include/glad/: glad.h
src/: Object.cpp  Primitives.cpp  QObject.cpp  QObjectManager.cpp  Renderer.cpp  TransMatrices.cpp  glad.c  main.cpp  window.cpp
src/shader/: defaultFrag.glsl  defaultVert.glsl
